# domino-physics

./: .gitignore  CMakeLists.txt  README.md
include/: DominoItem.h  Engine.h  common_includes.h  domino.h
src/: Engine.cpp
startdemo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gdbsource  run.sh
startdemo/include/: CMesh.h  CSceneNode.h  Camera.h  Light.h  OFF.h  Test.h  Test1.h  Vector3D.h  Vector4D.h  Vertex.h  common.h  common_ops.h  frames.h  main.h
startdemo/res/: plane.off  ship1.off
startdemo/src/: CMesh.cpp  CSceneNode.cpp  Camera.cpp  Light.cpp  OFF.cpp  Test1.cpp  main.cpp
